<resources>
    <string name="app_name">AndroidApplicationUAM</string>
    <string name="textView">Have you been in Stary Rynek?</string>
    <string name="BotonYes">YES</string>
    <string name="BotonNo">NO</string>

    <string name="textView3">What have you seen in Stary Rynek?</string>
    <string name="checkbox1">Fountains</string>
    <string name="checkbox2">Army Museum</string>
    <string name="checkbox3">"Clock's Goats"</string>
    <string name="checkbox4">City Hall</string>
    <string name="checkbox5">"Buildings' front"</string>
    <string name="checkbox6">Bars</string>
    <string name="textview4">Settings</string>
    <string name="textview5">Titles</string>
    <string name="textview6">Buttons</string>
    <string name="textview7">Descriptions</string>
    <string name="textview8">Skins</string>
    <string name="textview9">Screen</string>
    <string name="normaltext">Lists Text</string>

    <string name="titlesFont">Font</string>
    <string name="titlesSize">Size</string>
    <string name="titlesColor">Color</string>

    <string name="ButtonFont">Font</string>
    <string name="ButtonFontSize">Font Size</string>
    <string name="ButtonColor">Button Color</string>
    <string name="ButtonFontColor">Font Color</string>

    <string name="ScreenBackground">Background</string>





    <string name="BotonOk">OK</string>
    <string name="textView2">What do you prefer from Stary Rynek?</string>
    <string name="textTest">Test Text</string>
    <string name="textReturn">RETURN</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="white_theme">White Theme</string>
    <string name="cream_theme">Cream Theme</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>